[package]
name = "sctp-proto"
version = "0.2.2"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of SCTP in Sans-IO style"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sctp-proto"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sctp-proto"
keywords = ["sctp"]
categories = [ "network-programming", "asynchronous" ]

[dependencies]
bytes = "1.5.0"
fxhash = "0.2.1"
rand = "0.8.5"
slab = "0.4.9"
thiserror = "1.0.58"
log = "0.4.21"
crc = "3.0.1"

[dev-dependencies]
assert_matches = "1.5.0"
lazy_static = "1.4.0"
